Mon Nov  8 17:47:37 1999  Andrew Cagney  <cagney@b1.cygnus.com>

	* tuiRegs.c (_tuiRegisterFormat), tuiDisassem.c
	(tuiSetDisassemContent): Replace gdb_file_init_astring with
 	tui_sfileopen.  Replace gdb_file_get_strbuf with
 	tui_file_get_strbuf.
	
Mon Nov  8 16:54:51 1999  Andrew Cagney  <cagney@b1.cygnus.com>

	* tuiRegs.c (_tuiRegisterFormat), tuiDisassem.c
 	(tuiSetDisassemContent): Repace gdb_file_deallocate with
 	gdb_file_delete. Replace gdb_file_init_astring with tui_sfileopen.

Fri Sep 17 19:34:38 1999  Andrew Cagney  <cagney@b1.cygnus.com>

	* tuiSource.c: Include "source.h".
 	(open_source_file, find_source_lines): Delete declarations.

1999-01-26  Jason Molenda  (jsm@bugshack.cygnus.com)

	* tui.h: Include stdarg.h instead of varargs.h if we're on an ISO Cish
	system.

Thu Dec 31 12:08:32 1998  David Taylor  <taylor@texas.cygnus.com>

	The following changes were made by Jim Blandy <jimb@cygnus.com>,
 	Edith Epstein <eepstein@cygnus.com>, Elena Zannoni
 	<ezannoni@cygnus.com> Stan Shebs <shebs@cygnus.com>, and David
 	Taylor <taylor@cygnus.com>, as part of the project to merge in
 	changes originally made by HP; HP did not create ChangeLog
 	entries.

	* Makefile.in: New file; we're merging HP's changes into GDB, and
 	we've moved the TUI files into a subdirectory, so we need a new
 	Makefile.

	* tui.c:
	#include <term.h>, if we have it, to get declarations for
 	the termcap functions on Solaris.
	(tgoto): Add external K&R declaration for this; Solaris doesn't
	bother to actually declare it in their header files.
	(_tuiReset): Ignore the #definition of TIOCGETC if USG is defined;
 	we'd rather use the USG mechanisms than the Berkeley mechanisms
 	(TIOCGETC is one of the Berkeley terminal control ioctls).
  	Apologies if this causes trouble later; this should all be handled
 	by autoconf...
	(strcat_to_buf, strcat_to_buf_with_fmt): New functions, moved here
 	from ../utils.h.
	(tuiFree): replace safe_free with free.